// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Img"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage Debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<img
  alt="Product Img"
  className="productImg undefined"
  src="https:://hola.jpg"
/>
`;
